# simple-terra-reward-pool

./: .gitignore  Cargo.toml  README.md
artifacts/: checksums.txt  reward_pool_contracts.wasm
contracts/reward_pool/: Cargo.toml
contracts/reward_pool/examples/: schema.rs
contracts/reward_pool/schema/: config_response.json  execute_msg.json  instantiate_msg.json  query_msg.json  state.json  user_info_response.json
contracts/reward_pool/src/: contract.rs  execute.rs  lib.rs  query.rs  state.rs  utils.rs
contracts/reward_pool/src/tests/: claim_test.rs  deposit_test.rs  fund_cw20_test.rs  fund_denom_test.rs  instantiate_test.rs  mock_querier.rs  mod.rs  test_utils.rs  update_config_test.rs  withdraw_test.rs
js/: README.md  address.json  index.js  key.example.json  utils.js
