[package]
name = "reward-pool-contracts"
version = "1.0.0"
authors = ["Ryuhei"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.2" }
terra-cosmwasm = "2.2.0"
cw20 = "0.8.0" 
cw-storage-plus  = { version = "0.8.0" }
terraswap = "2.4.0"
schemars = "0.8.7"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
reward-pool = { version = "1.0.0", path = "../../packages/reward_pool" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.2", default-features = false  }
